# data-generator

./: .gitignore  Cargo.toml  README.md  config.json
src/: cli.rs  field.rs  generator.rs  lib.rs  main.rs  seed_data.rs
