[package]
name = "data-generator"
version = "0.1.0"
authors = ["amedvedev <amedvyedyev@gmail.com>"]

[lib]
name = "data_generator"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
clap = "2.31.2"
serde = "1.0"
serde_json = "1.0.17"
serde_derive = "1.0.50"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.4"
Inflector = { version = "0.11.3", default-features=false }
indicatif = "0.9.0"
names = "0.10.0"